# Ghostwriter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  requirements.txt
Docker/: Dockerfile  UBUNTU.Dockerfile  Ubuntu.Dockerfile
benchmark/: CMakeLists.txt
benchmark/kafka/: CMakeLists.txt  simple_key_producer.cpp
benchmark/rembrandt/: CMakeLists.txt  benchmark_broker_node.cpp  simple_key_consumer.cpp  simple_key_producer.cpp
benchmarking/: Untitled.ipynb  deployment.py  find_maximum_throughput.py  ghostwriter.py  requirements.in  requirements.txt  round_trip_test.py  throughput_suite.py  utils.py  ysb_benchmark_suite.py
benchmarking/analysis/: Untitled.ipynb
benchmarking/benchmarks/: base.py  ysb.py
benchmarking/brokers/: base.py  ghostwriter.py
benchmarking/config/kafka/: producer.properties  server.properties
benchmarking/python/: pyproject.toml
benchmarking/python/benchmarking/: deployment.py  ssh.py  utils.py
benchmarking/python/benchmarking/analysis/: Plotting.ipynb  Untitled.ipynb
benchmarking/python/benchmarking/benchmarks/: base.py  ysb.py  ysb_sustainable.txt
benchmarking/python/benchmarking/benchmarks/throughput/: base.py  ghostwriter.py  kafka.py
benchmarking/python/benchmarking/benchmarks/ysb/: base.py  ghostwriter.py  kafka.py
benchmarking/python/benchmarking/brokers/: base.py  ghostwriter.py  kafka.py
benchmarking/python/benchmarking/cli/: ghostwriter.py  kafka.py  kafkadirect.py
benchmarking/scripts/: install-cx.sh  install_ucx.sh
benchmarking/scripts/common/: start_broker.sh  start_storage.sh  stop_broker.sh  stop_storage.sh
benchmarking/scripts/distribution/: build.sh  ship.sh
benchmarking/scripts/slurm/: salloc.sh
benchmarking/scripts/throughput/: start_consumer.sh  start_producer.sh
benchmarking/scripts/ysb/: start_consumer.sh  start_producer.sh
benchmarks/notebooks/: Sustainable Throughput.ipynb  Throughput Benchmark.ipynb
benchmarks/notebooks/SIGMOD/: throughput.ipynb
benchmarks/scripts/: Untitled Document 1
benchmarks/ucx_tests/: code_snippets.txt  get_tests  put_bw_tests  put_lat_tests  stream_bw_tests  stream_lat_tests
cmake/: FindBoost.cmake  FindTBB.cmake.bkp
include/rembrandt/: utils.h
include/rembrandt/benchmark/: consumer.h  data_generator.h  data_processor.h  parallel_data_generator.h  producer.h  rate_limiter.h  throughput_throttler.h
include/rembrandt/broker/: broker_node.h  broker_node_config.h  index.h  logical_segment.h  partition.h  physical_segment.h  remote_batch.h  segment_info.h  staged_message.h
include/rembrandt/consumer/: consumer.h  consumer_config.h  consumer_segment_info.h  direct_consumer.h  read_segment.h  receiver.h
include/rembrandt/logging/: latency_logger.h  throughput_logger.h  (+1 more)
scripts/: build.sh  ship.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark_broker_node.cpp  benchmark_producer.cpp  benchmark_storage_node.cpp  consumer.cpp  data_generator.cpp  data_processor.cpp  parallel_data_generator.cpp  parallel_data_processor.cpp  producer.cpp  rate_limiter.cpp  simple_key_consumer.cpp  simple_key_consumer.cpp.bkp  simple_key_producer.cpp  simple_key_producer.cpp.bkp  throughput_throttler.cpp
src/benchmark/common/: data_generator.cpp  data_processor.cpp  parallel_data_generator.cpp  parallel_data_processor.cpp  rate_limiter.cpp  throughput_throttler.cpp
src/benchmark/common/ghostwriter/: benchmark_broker_node.cpp  benchmark_storage_node.cpp
src/benchmark/common/kafka/: parallel_data_processor.cpp  simple_key_consumer.cpp  simple_key_producer.cpp
src/benchmark/kafka/: data_processor.cpp  simple_key_consumer.cpp  simple_key_producer.cpp
src/benchmark/throughput/ghostwriter/: consumer.cpp  producer.cpp
src/benchmark/throughput/kafka/: consumer.cpp  producer.cpp
src/benchmark/ysb/: CMakeLists.txt  data_generator.cpp  ghostwriter_consumer.cpp  ghostwriter_producer.cpp  local_ysb_runner.cpp  ls_data_generator.cpp  ysb_test_runner.cpp
src/benchmark/ysb/YahooBenchmark/: GhostwriterYSB.cpp  KafkaYSB.cpp  ghostwriter_consumer.cpp  lightsaber_data_generator.cpp
src/benchmark/ysb/ghostwriter/: consumer.cpp  ghostwriter_consumer.cpp  ghostwriter_producer.cpp  producer.cpp
src/benchmark/ysb/kafka/: consumer.cpp  producer.cpp
src/broker/: broker_node.cpp  index.cpp  logical_segment.cpp  partition.cpp  physical_segment.cpp  remote_slice.cpp  remote_slice.h  segment_info.cpp  staged_message.cpp
src/consumer/: consumer.cpp  direct_consumer.cpp  receiver.cpp
src/logging/: latency_logger.cpp  throughput_logger.cpp  windowed_latency_logger.cpp
src/network/: attached_message.cpp  basic_message.cpp  client.cpp  connection_manager.cpp  context.cpp  detached_message.cpp  flat_buffers_message.cpp  memory_region.cpp  message.cpp  message_handler.cpp  request_processor.cpp  server.cpp  test_server.cpp  utils.cpp  worker.cpp
src/network/socket/: static_client.cpp  static_server.cpp
src/network/ucx/: client.cpp  context.cpp  endpoint.cpp  endpoint_factory.cpp  memory_region.cpp  test_client.cpp  worker.cpp
src/producer/: async_batch_producer.cpp  async_direct_producer.cpp  batch.cpp  direct_producer.cpp  message_accumulator.cpp  producer.cpp  sender.cpp
src/protocol/: message_generator.cpp  protocol.cpp  rembrandt_protocol.capnp  rembrandt_protocol.capnp.c++  rembrandt_protocol.fbs
src/protocol/flatbuffers/: rembrandt_protocol.fbs
src/storage/: persistent_storage_region.cpp  protocol_handler.cpp  r_key_server.cpp  segment.cpp  segment_header.cpp  storage_manager.cpp  storage_manager.h  storage_node.cpp  storage_region.cpp  storage_region.h  volatile_storage_region.cpp
tests/: CMakeLists.txt  batch_test.cpp  connection_manager_test.cpp  flatbuffer_scratchtest.cpp  message_accumulator_test.cpp  message_generator_test.cpp  segment_test.cpp  static_client_server_test.cpp
tests/benchmark/: data_generator_test.cpp  rate_limiter_test.cpp
tests/e2e/: round_trip_test.cpp
tests/network/: client.cpp  connection_manager_test.cpp  server.cpp
tests/protocol/: message_generator_test.cpp
tests/storage/: segment_test.cpp  storage_node_test.cpp
(+80 files in other folders)
