cmake_minimum_required(VERSION 3.13)
project(rembrandt VERSION 0.1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

message("Build type: ${CMAKE_BUILD_TYPE}")
if (CMAKE_BUILD_TYPE MATCHES Debug)
    message("BUILDING DEBUG")
else()
    message("BUILDING RELEASE")
    add_compile_options(-O3 -march=native -mtune=native -mavx)
endif()

include(GoogleTest)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(Boost_USE_STATIC_LIBS ON)
find_package(Boost REQUIRED program_options)
include_directories(${Boost_INCLUDE_DIRS})
add_subdirectory(src)
enable_testing()
add_subdirectory(tests)
add_subdirectory(extern/librdkafka)
add_subdirectory(extern/hdrhistogram)
